Tools/Dsl/MessageContractsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 /Users/abdullin/MessageContracts.g 2012-02-22 14:00:00

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591


using System.Diagnostics;
using Antlr.Runtime;
using Antlr.Runtime.Tree;

namespace Hub.Dsl 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class MessageContractsParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BlockToken", "COMMENT", "CommandToken", "DisctionaryToken", "ENTITY", "EntityDefinition", "EventToken", "FragmentEntry", "FragmentGroup", "FragmentReference", "ID", "INT", "LET", "MemberToken", "Modifier", "ModifierDefinition", "TypeToken", "USING", "WS", "'('", "')'", "','", "';'", "'='"
	};
	public const int EOF=-1;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int BlockToken=4;
	public const int COMMENT=5;
	public const int CommandToken=6;
	public const int DisctionaryToken=7;
	public const int ENTITY=8;
	public const int EntityDefinition=9;
	public const int EventToken=10;
	public const int FragmentEntry=11;
	public const int FragmentGroup=12;
	public const int FragmentReference=13;
	public const int ID=14;
	public const int INT=15;
	public const int LET=16;
	public const int MemberToken=17;
	public const int Modifier=18;
	public const int ModifierDefinition=19;
	public const int TypeToken=20;
	public const int USING=21;
	public const int WS=22;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public MessageContractsParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public MessageContractsParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}
	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return MessageContractsParser.tokenNames; } }
	public override string GrammarFileName { get { return "/Users/abdullin/MessageContracts.g"; } }


	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_program() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_program() {}

	// $ANTLR start "program"
	// /Users/abdullin/MessageContracts.g:27:1: program : ( declaration )+ ;
	[GrammarRule("program")]
	private AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    AstParserRuleReturnScope<object, IToken> declaration1 = default(AstParserRuleReturnScope<object, IToken>);


		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(27, 1);
		try
		{
			// /Users/abdullin/MessageContracts.g:28:2: ( ( declaration )+ )
			DebugEnterAlt(1);
			// /Users/abdullin/MessageContracts.g:28:4: ( declaration )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(28, 4);
			// /Users/abdullin/MessageContracts.g:28:4: ( declaration )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_0 = input.LA(1);

				if ((LA1_0==ENTITY||LA1_0==ID||LA1_0==LET||LA1_0==USING))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/abdullin/MessageContracts.g:28:4: declaration
					{
					DebugLocation(28, 4);
					PushFollow(Follow._declaration_in_program101);
					declaration1=declaration();
					PopFollow();

					adaptor.AddChild(root_0, declaration1.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
	    }
	 	DebugLocation(29, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_declaration() {}

	// $ANTLR start "declaration"
	// /Users/abdullin/MessageContracts.g:31:1: declaration : ( modifier_declaration | frag_declaration | type_declaration | entity_declaration );
	[GrammarRule("declaration")]
	private AstParserRuleReturnScope<object, IToken> declaration()
	{
		EnterRule_declaration();
		EnterRule("declaration", 2);
		TraceIn("declaration", 2);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    AstParserRuleReturnScope<object, IToken> modifier_declaration2 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> frag_declaration3 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> type_declaration4 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> entity_declaration5 = default(AstParserRuleReturnScope<object, IToken>);


		try { DebugEnterRule(GrammarFileName, "declaration");
		DebugLocation(31, 1);
		try
		{
			// /Users/abdullin/MessageContracts.g:32:2: ( modifier_declaration | frag_declaration | type_declaration | entity_declaration )
			int alt2=4;
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			switch (input.LA(1))
			{
			case USING:
				{
				alt2 = 1;
				}
				break;
			case LET:
				{
				alt2 = 2;
				}
				break;
			case ID:
				{
				alt2 = 3;
				}
				break;
			case ENTITY:
				{
				alt2 = 4;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// /Users/abdullin/MessageContracts.g:32:4: modifier_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(32, 4);
				PushFollow(Follow._modifier_declaration_in_declaration114);
				modifier_declaration2=modifier_declaration();
				PopFollow();

				adaptor.AddChild(root_0, modifier_declaration2.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// /Users/abdullin/MessageContracts.g:33:4: frag_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(33, 4);
				PushFollow(Follow._frag_declaration_in_declaration119);
				frag_declaration3=frag_declaration();
				PopFollow();

				adaptor.AddChild(root_0, frag_declaration3.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// /Users/abdullin/MessageContracts.g:34:4: type_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(34, 4);
				PushFollow(Follow._type_declaration_in_declaration124);
				type_declaration4=type_declaration();
				PopFollow();

				adaptor.AddChild(root_0, type_declaration4.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// /Users/abdullin/MessageContracts.g:35:4: entity_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(35, 4);
				PushFollow(Follow._entity_declaration_in_declaration129);
				entity_declaration5=entity_declaration();
				PopFollow();

				adaptor.AddChild(root_0, entity_declaration5.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("declaration", 2);
			LeaveRule("declaration", 2);
			LeaveRule_declaration();
	    }
	 	DebugLocation(36, 1);
		} finally { DebugExitRule(GrammarFileName, "declaration"); }
		return retval;

	}
	// $ANTLR end "declaration"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_frag_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_frag_declaration() {}

	// $ANTLR start "frag_declaration"
	// /Users/abdullin/MessageContracts.g:38:1: frag_declaration : LET ID '=' ID ID ';' -> ^( FragmentEntry ID ID ID ) ;
	[GrammarRule("frag_declaration")]
	private AstParserRuleReturnScope<object, IToken> frag_declaration()
	{
		EnterRule_frag_declaration();
		EnterRule("frag_declaration", 3);
		TraceIn("frag_declaration", 3);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    IToken LET6 = default(IToken);
	    IToken ID7 = default(IToken);
	    IToken char_literal8 = default(IToken);
	    IToken ID9 = default(IToken);
	    IToken ID10 = default(IToken);
	    IToken char_literal11 = default(IToken);

	    object LET6_tree = default(object);
	    object ID7_tree = default(object);
	    object char_literal8_tree = default(object);
	    object ID9_tree = default(object);
	    object ID10_tree = default(object);
	    object char_literal11_tree = default(object);
	    RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
	    RewriteRuleTokenStream stream_LET=new RewriteRuleTokenStream(adaptor,"token LET");
	    RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
	    RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");

		try { DebugEnterRule(GrammarFileName, "frag_declaration");
		DebugLocation(38, 52);
		try
		{
			// /Users/abdullin/MessageContracts.g:39:2: ( LET ID '=' ID ID ';' -> ^( FragmentEntry ID ID ID ) )
			DebugEnterAlt(1);
			// /Users/abdullin/MessageContracts.g:39:4: LET ID '=' ID ID ';'
			{
			DebugLocation(39, 4);
			LET6=(IToken)Match(input,LET,Follow._LET_in_frag_declaration141);  
			stream_LET.Add(LET6);

			DebugLocation(39, 8);
			ID7=(IToken)Match(input,ID,Follow._ID_in_frag_declaration143);  
			stream_ID.Add(ID7);

			DebugLocation(39, 11);
			char_literal8=(IToken)Match(input,27,Follow._27_in_frag_declaration145);  
			stream_27.Add(char_literal8);

			DebugLocation(39, 15);
			ID9=(IToken)Match(input,ID,Follow._ID_in_frag_declaration147);  
			stream_ID.Add(ID9);

			DebugLocation(39, 18);
			ID10=(IToken)Match(input,ID,Follow._ID_in_frag_declaration149);  
			stream_ID.Add(ID10);

			DebugLocation(39, 21);
			char_literal11=(IToken)Match(input,26,Follow._26_in_frag_declaration151);  
			stream_26.Add(char_literal11);



			{
			// AST REWRITE
			// elements: ID, ID, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 39:25: -> ^( FragmentEntry ID ID ID )
			{
				DebugLocation(39, 28);
				// /Users/abdullin/MessageContracts.g:39:28: ^( FragmentEntry ID ID ID )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(39, 30);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(FragmentEntry, "FragmentEntry"), root_1);

				DebugLocation(39, 44);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(39, 47);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(39, 50);
				adaptor.AddChild(root_1, stream_ID.NextNode());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("frag_declaration", 3);
			LeaveRule("frag_declaration", 3);
			LeaveRule_frag_declaration();
	    }
	 	DebugLocation(39, 52);
		} finally { DebugExitRule(GrammarFileName, "frag_declaration"); }
		return retval;

	}
	// $ANTLR end "frag_declaration"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_modifier_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_modifier_declaration() {}

	// $ANTLR start "modifier_declaration"
	// /Users/abdullin/MessageContracts.g:41:1: modifier_declaration : USING Modifier '=' ID ( ',' ID )* ';' -> ^( ModifierDefinition Modifier ( ID )* ) ;
	[GrammarRule("modifier_declaration")]
	private AstParserRuleReturnScope<object, IToken> modifier_declaration()
	{
		EnterRule_modifier_declaration();
		EnterRule("modifier_declaration", 4);
		TraceIn("modifier_declaration", 4);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    IToken USING12 = default(IToken);
	    IToken Modifier13 = default(IToken);
	    IToken char_literal14 = default(IToken);
	    IToken ID15 = default(IToken);
	    IToken char_literal16 = default(IToken);
	    IToken ID17 = default(IToken);
	    IToken char_literal18 = default(IToken);

	    object USING12_tree = default(object);
	    object Modifier13_tree = default(object);
	    object char_literal14_tree = default(object);
	    object ID15_tree = default(object);
	    object char_literal16_tree = default(object);
	    object ID17_tree = default(object);
	    object char_literal18_tree = default(object);
	    RewriteRuleTokenStream stream_USING=new RewriteRuleTokenStream(adaptor,"token USING");
	    RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
	    RewriteRuleTokenStream stream_Modifier=new RewriteRuleTokenStream(adaptor,"token Modifier");
	    RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
	    RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
	    RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");

		try { DebugEnterRule(GrammarFileName, "modifier_declaration");
		DebugLocation(41, 76);
		try
		{
			// /Users/abdullin/MessageContracts.g:42:2: ( USING Modifier '=' ID ( ',' ID )* ';' -> ^( ModifierDefinition Modifier ( ID )* ) )
			DebugEnterAlt(1);
			// /Users/abdullin/MessageContracts.g:42:4: USING Modifier '=' ID ( ',' ID )* ';'
			{
			DebugLocation(42, 4);
			USING12=(IToken)Match(input,USING,Follow._USING_in_modifier_declaration178);  
			stream_USING.Add(USING12);

			DebugLocation(42, 10);
			Modifier13=(IToken)Match(input,Modifier,Follow._Modifier_in_modifier_declaration180);  
			stream_Modifier.Add(Modifier13);

			DebugLocation(42, 19);
			char_literal14=(IToken)Match(input,27,Follow._27_in_modifier_declaration182);  
			stream_27.Add(char_literal14);

			DebugLocation(42, 23);
			ID15=(IToken)Match(input,ID,Follow._ID_in_modifier_declaration184);  
			stream_ID.Add(ID15);

			DebugLocation(42, 26);
			// /Users/abdullin/MessageContracts.g:42:26: ( ',' ID )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_0 = input.LA(1);

				if ((LA3_0==25))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/abdullin/MessageContracts.g:42:27: ',' ID
					{
					DebugLocation(42, 27);
					char_literal16=(IToken)Match(input,25,Follow._25_in_modifier_declaration187);  
					stream_25.Add(char_literal16);

					DebugLocation(42, 31);
					ID17=(IToken)Match(input,ID,Follow._ID_in_modifier_declaration189);  
					stream_ID.Add(ID17);


					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }

			DebugLocation(42, 36);
			char_literal18=(IToken)Match(input,26,Follow._26_in_modifier_declaration193);  
			stream_26.Add(char_literal18);



			{
			// AST REWRITE
			// elements: ID, Modifier
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 42:40: -> ^( ModifierDefinition Modifier ( ID )* )
			{
				DebugLocation(42, 43);
				// /Users/abdullin/MessageContracts.g:42:43: ^( ModifierDefinition Modifier ( ID )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(42, 45);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ModifierDefinition, "ModifierDefinition"), root_1);

				DebugLocation(42, 64);
				adaptor.AddChild(root_1, stream_Modifier.NextNode());
				DebugLocation(42, 73);
				// /Users/abdullin/MessageContracts.g:42:73: ( ID )*
				while ( stream_ID.HasNext )
				{
					DebugLocation(42, 73);
					adaptor.AddChild(root_1, stream_ID.NextNode());

				}
				stream_ID.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("modifier_declaration", 4);
			LeaveRule("modifier_declaration", 4);
			LeaveRule_modifier_declaration();
	    }
	 	DebugLocation(42, 76);
		} finally { DebugExitRule(GrammarFileName, "modifier_declaration"); }
		return retval;

	}
	// $ANTLR end "modifier_declaration"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_entity_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_entity_declaration() {}

	// $ANTLR start "entity_declaration"
	// /Users/abdullin/MessageContracts.g:45:1: entity_declaration : ENTITY ID block ';' -> ^( EntityDefinition ID block ) ;
	[GrammarRule("entity_declaration")]
	private AstParserRuleReturnScope<object, IToken> entity_declaration()
	{
		EnterRule_entity_declaration();
		EnterRule("entity_declaration", 5);
		TraceIn("entity_declaration", 5);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    IToken ENTITY19 = default(IToken);
	    IToken ID20 = default(IToken);
	    IToken char_literal22 = default(IToken);
	    AstParserRuleReturnScope<object, IToken> block21 = default(AstParserRuleReturnScope<object, IToken>);

	    object ENTITY19_tree = default(object);
	    object ID20_tree = default(object);
	    object char_literal22_tree = default(object);
	    RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
	    RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
	    RewriteRuleTokenStream stream_ENTITY=new RewriteRuleTokenStream(adaptor,"token ENTITY");
	    RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		try { DebugEnterRule(GrammarFileName, "entity_declaration");
		DebugLocation(45, 54);
		try
		{
			// /Users/abdullin/MessageContracts.g:46:2: ( ENTITY ID block ';' -> ^( EntityDefinition ID block ) )
			DebugEnterAlt(1);
			// /Users/abdullin/MessageContracts.g:46:4: ENTITY ID block ';'
			{
			DebugLocation(46, 4);
			ENTITY19=(IToken)Match(input,ENTITY,Follow._ENTITY_in_entity_declaration220);  
			stream_ENTITY.Add(ENTITY19);

			DebugLocation(46, 11);
			ID20=(IToken)Match(input,ID,Follow._ID_in_entity_declaration222);  
			stream_ID.Add(ID20);

			DebugLocation(46, 14);
			PushFollow(Follow._block_in_entity_declaration224);
			block21=block();
			PopFollow();

			stream_block.Add(block21.Tree);
			DebugLocation(46, 20);
			char_literal22=(IToken)Match(input,26,Follow._26_in_entity_declaration226);  
			stream_26.Add(char_literal22);



			{
			// AST REWRITE
			// elements: block, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 46:24: -> ^( EntityDefinition ID block )
			{
				DebugLocation(46, 27);
				// /Users/abdullin/MessageContracts.g:46:27: ^( EntityDefinition ID block )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(46, 29);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(EntityDefinition, "EntityDefinition"), root_1);

				DebugLocation(46, 46);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(46, 49);
				adaptor.AddChild(root_1, stream_block.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("entity_declaration", 5);
			LeaveRule("entity_declaration", 5);
			LeaveRule_entity_declaration();
	    }
	 	DebugLocation(46, 54);
		} finally { DebugExitRule(GrammarFileName, "entity_declaration"); }
		return retval;

	}
	// $ANTLR end "entity_declaration"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_type_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_type_declaration() {}

	// $ANTLR start "type_declaration"
	// /Users/abdullin/MessageContracts.g:48:1: type_declaration : ID ( Modifier )* block -> ^( TypeToken ID block ( Modifier )* ) ;
	[GrammarRule("type_declaration")]
	private AstParserRuleReturnScope<object, IToken> type_declaration()
	{
		EnterRule_type_declaration();
		EnterRule("type_declaration", 6);
		TraceIn("type_declaration", 6);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    IToken ID23 = default(IToken);
	    IToken Modifier24 = default(IToken);
	    AstParserRuleReturnScope<object, IToken> block25 = default(AstParserRuleReturnScope<object, IToken>);

	    object ID23_tree = default(object);
	    object Modifier24_tree = default(object);
	    RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
	    RewriteRuleTokenStream stream_Modifier=new RewriteRuleTokenStream(adaptor,"token Modifier");
	    RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		try { DebugEnterRule(GrammarFileName, "type_declaration");
		DebugLocation(48, 56);
		try
		{
			// /Users/abdullin/MessageContracts.g:49:2: ( ID ( Modifier )* block -> ^( TypeToken ID block ( Modifier )* ) )
			DebugEnterAlt(1);
			// /Users/abdullin/MessageContracts.g:49:4: ID ( Modifier )* block
			{
			DebugLocation(49, 4);
			ID23=(IToken)Match(input,ID,Follow._ID_in_type_declaration246);  
			stream_ID.Add(ID23);

			DebugLocation(49, 7);
			// /Users/abdullin/MessageContracts.g:49:7: ( Modifier )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, decisionCanBacktrack[4]);
				int LA4_0 = input.LA(1);

				if ((LA4_0==Modifier))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/abdullin/MessageContracts.g:49:7: Modifier
					{
					DebugLocation(49, 7);
					Modifier24=(IToken)Match(input,Modifier,Follow._Modifier_in_type_declaration248);  
					stream_Modifier.Add(Modifier24);


					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(49, 17);
			PushFollow(Follow._block_in_type_declaration251);
			block25=block();
			PopFollow();

			stream_block.Add(block25.Tree);


			{
			// AST REWRITE
			// elements: Modifier, block, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 49:23: -> ^( TypeToken ID block ( Modifier )* )
			{
				DebugLocation(49, 26);
				// /Users/abdullin/MessageContracts.g:49:26: ^( TypeToken ID block ( Modifier )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(49, 28);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(TypeToken, "TypeToken"), root_1);

				DebugLocation(49, 38);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(49, 41);
				adaptor.AddChild(root_1, stream_block.NextTree());
				DebugLocation(49, 47);
				// /Users/abdullin/MessageContracts.g:49:47: ( Modifier )*
				while ( stream_Modifier.HasNext )
				{
					DebugLocation(49, 47);
					adaptor.AddChild(root_1, stream_Modifier.NextNode());

				}
				stream_Modifier.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("type_declaration", 6);
			LeaveRule("type_declaration", 6);
			LeaveRule_type_declaration();
	    }
	 	DebugLocation(49, 56);
		} finally { DebugExitRule(GrammarFileName, "type_declaration"); }
		return retval;

	}
	// $ANTLR end "type_declaration"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_member() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_member() {}

	// $ANTLR start "member"
	// /Users/abdullin/MessageContracts.g:51:1: member : ( ID ID -> ^( MemberToken ID ID ) | ID -> ^( FragmentReference ID ) );
	[GrammarRule("member")]
	private AstParserRuleReturnScope<object, IToken> member()
	{
		EnterRule_member();
		EnterRule("member", 7);
		TraceIn("member", 7);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);
